5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1880_1620.log
== TEST (2019-07-03 15:16:18) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = (5*p)/100
	g = t[i]*x
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:17:39) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:17:47) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:18:11) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:18:16) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:21:58) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:22:42) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:22:47) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:22) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:22) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:51) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:24:05) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:24:30) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- EXECUTION TIME:
1.29405
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:
10.0
-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:
156.0
-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:25:06) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(i)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:25:25) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(i)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:25:31) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(x)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:25:52) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:27:49) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:28:16) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
	g= g+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:29:17) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:34:32) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:06) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g =+ t[i]*x
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:36:11) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += t[i]*x
	b = t*p
	i= i+1
print(g)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:36:18) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += t[i]*x
	b = t*p
	i= i+1
print(b)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:36:50) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += t[i]*x
	b = 
	i= i+1
print(b)
	
	
-- ERROR:
File "XXXX", line 9
    b = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:37:07) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += t[i]*x
	b = g*x
	i= i+1
print(b)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:37:45) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += t[i]*x
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:38:19) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = g+ (t[i])*x
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:38:41) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = g+ (t[i])*x
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:39:29) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g+= (t[i])*x
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:16) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = (5*p[i])
	g+= ((t[i])*x/100)
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:46) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g+= (t[i])*x
	b = g*x
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:52) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	b = b+ (g*x)
	i= i+1
print(round(b))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:42) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g+= (t[i])*x
	b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:45:21) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g+= (t[i])*x
	b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:45:44) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:45:52) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:16) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	#b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:39) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	#b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:46:43) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	b = g*x
	i= i+1
print(round(b,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:47:40) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
b=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g = (t[i])*x
	b = g*x
	i= i+1
print(round(g,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:49:39) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += (t[i])*x
	i= i+1
print(round(g,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:50:02) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += (t[i])*x
	i= i+1
print(round(g,2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:50:39) 
-- CODE:
from numpy import*
t = array(eval(input("Digite o tempo: ")))
p = array(eval(input("Digite o percentual: ")))
i=0
g=0
while(i<size(t)):
	x = ((5*p[i])/100)
	g += (t[i])*x
	i= i+1
print(round(g,2))
	
	
-- EXECUTION TIME:
1.17945
-- TEST CASE 1:
---- input:
[5,30,5,10]
[20,35,15,20]
---- correct output:
71.25
---- user output:
71.25
-- TEST CASE 2:
---- input:
[5,30,5,7,52]
[20,35,15,10,60]
---- correct output:
220.75
---- user output:
220.75
-- TEST CASE 3:
---- input:
[2,60,10,30,20,10]
[10,70,20,35,21,10]
---- correct output:
299.5
---- user output:
299.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
